# pushing_benchmark

Data/: 5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.02_1_laps_version_1_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.02_1_laps_version_2_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.02_1_laps_version_3_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.02_1_laps_version_4_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.02_1_laps_version_5_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.05_1_laps_version_1_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.05_1_laps_version_2_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.05_1_laps_version_3_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.05_1_laps_version_4_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.05_1_laps_version_5_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.08_1_laps_version_1_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.08_1_laps_version_2_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.08_1_laps_version_3_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.08_1_laps_version_4_gpdata_controller.json  5_data_8Track_point_pusher_radius_0.15_dist_0.15_vel_0.08_1_laps_version_5_gpdata_controller.json  8Track_line_pusher_radius_0_15_vel_0_05_3_laps.json  8Track_point_pusher_radius_0.11_vel_0.05_3_laps.json  8Track_point_pusher_radius_0.11_vel_0.08_3_laps.json  8Track_point_pusher_radius_0.12_vel_0.05_3_laps.json  8Track_point_pusher_radius_0.12_vel_0.08_3_laps.json  8Track_point_pusher_radius_0.13_vel_0.05_3_laps.json  8Track_point_pusher_radius_0.13_vel_0.08_3_laps.json  8Track_point_pusher_radius_0.14_vel_0.05_3_laps.json  8Track_point_pusher_radius_0.14_vel_0.08_3_laps.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_analytical_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_1000_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_100_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_10_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_2000_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_200_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_20_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_5000_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_500_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_50_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.02_1_laps_data_5_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.03_1_laps_data_1000_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.03_1_laps_data_100_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.03_1_laps_data_10_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.03_1_laps_data_2000_gpdata_controller.json  8Track_point_pusher_radius_0.15_vel_0.03_1_laps_data_200_gpdata_controller.json  (+380 more)
Simulator/: GP_test.m  LinePusher.m  MPPI.m  (+12 more)
catkin_ws/src/push_control/: CMakeLists.txt  package.xml
catkin_ws/src/push_control/include/: testQPsolvers.hpp
catkin_ws/src/push_control/src/: 2anew_output.avi  ABBRobot.cpp  ABBRobot.h  Controller.h  FOM.cpp  FOM.h  Friction.cpp  Friction.h  GPController.cpp  GPController.h  GPDataController.cpp  GPDataController.h  Helper.cpp  Helper.h  HybridController.cpp  HybridController.h  LModes.cpp  LModes.h  LearnedModes  LinePusher.cpp  LinePusher.h  LoopControl.cpp  LoopControl.h  MPC.cpp  MPC.h  MPC_thread.cpp  MPC_thread.h  OptProgram.cpp  OptProgram.h  PointPusher.cpp  PointPusher.h  Pusher.h  PusherSlider.cpp  PusherSlider.h  Shape.h  StructuresLinePusher.h  StructuresMain.h  StructuresOptProgram.h  abort.py  analyze_data.py  (+13 more)
catkin_ws/src/push_control/src/Data/: 8Track_point_pusher_radius_0.15_vel_0.05_3_lapstest.json  8Track_point_pusher_radius_0.1_vel_0.05_3_lapspoint_FOM_straight_with_perturb.json  8Track_point_pusher_radius_0_15_vel_0_05_3_laps_gp_controllerexperiment_1_debug.json  8Track_point_pusher_radius_0_15_vel_0_05_3_laps_gp_controllertest.json  8Track_point_pusher_radius_0_15_vel_0_05_3_laps_hybrid_controllertest.json  plot_traj.py
catkin_ws/src/push_control/src/egm/: egm.pb.cc
catkin_ws/src/push_control/srv/: MODE_SRV.srv  rosbag.srv
(+234 files in other folders)
